# ChronoWard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.gemini/skills/changelog-formatting/: SKILL.md
.gemini/skills/git-single-commit-workflow/: SKILL.md
src/: app.js  index.html  overlay.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: webview2-check.nsh
src-tauri/src/: crypto.rs  lib.rs  main.rs  scheduler.rs  state.rs  tray.rs
src-tauri/src/commands/: csv.rs  mod.rs  settings.rs  sheets.rs  timers.rs  window.rs
